--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!doctype html>
 <html>
-  <head>
-    <title>
-      map
-    </title>
-  </head>
-  <body>
-    <h1>
-    help
-    </h1>
-  </body>
+	<head>
+		<title>
+			Mummy's message
+		</title>
+		<style>
+img {
+	border: solid green 8px;
+}
+@keyframes example {
+  0%   {background-color:red; left:0px; top:0px;}
+  25%  {background-color:yellow; left:200px; top:0px;}
+  50%  {background-color:blue; left:200px; top:200px;}
+  75%  {background-color:green; left:0px; top:200px;}
+  100% {background-color:red; left:0px; top:0px;}
+}
+.spin {
+	rotate: -3600deg;
+	animation-name: example;
+  	animation-duration: 4s;
+  	animation-iteration-count: 3;
+	box-shadow: 3px 3px 16px;
+}
+		</style>
+	</head>
+	<body>
+		<h1>To Mummy, I love you.<br>Hello Mummy are you ok? From Willa.</h1>
+		<div><img src="pixie.jpg" width="500px" height="500px"></div>
+		<div><img class="spin" src="butterfly.png" width="500px" height="450px"></div>
+	</body>
 </html>
