--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
 img {
 	border: solid green 8px;
 }
-@keyframes example {
-  0%   {background-color:red; left:0px; top:0px;}
-  25%  {background-color:yellow; left:200px; top:0px;}
-  50%  {background-color:blue; left:200px; top:200px;}
-  75%  {background-color:green; left:0px; top:200px;}
-  100% {background-color:red; left:0px; top:0px;}
+@keyframes wobble {
+	50% {
+	transform: translateX(3px) rotate(4deg);
+	}
+	100% {
+	transform: translateX(-3px) rotate(-4deg);
+	}
 }
-.spin {
-	rotate: -3600deg;
-	animation-name: example;
-  	animation-duration: 4s;
-  	animation-iteration-count: 3;
+h1:hover, h1:focus, h1:active {
+	animation-name: wobble;
+  	animation-duration: 0.15s;
+  	animation-iteration-count: infinite;
 	box-shadow: 3px 3px 16px;
 }
 		</style>
 	</head>
 	<body>
 		<h1>To Mummy, I love you.<br>Hello Mummy are you ok? From Willa.</h1>
-		<div><img src="pixie.jpg" width="500px" height="500px"></div>
-		<div><img class="spin" src="butterfly.png" width="500px" height="450px"></div>
+		<div><img src="pixie.jpg" width="500px" height="500px">
+		<img class="spin" src="butterfly.png" width="500px" height="450px"></div>
 	</body>
 </html>
