--- a/index.html
+++ b/index.html
@@ -16,11 +16,20 @@ img {
 	transform: translateX(-3px) rotate(-4deg);
 	}
 }
+			h1{
+			box-shadow: 3px 3px 16px;
+				display: inline-block;
+				vertical-align: middle;
+				padding: 8px;
+				cursor: pointer;
+				background: lightgray;
+				font-family: serif;
+			}
 h1:hover, h1:focus, h1:active {
 	animation-name: wobble;
   	animation-duration: 0.15s;
   	animation-iteration-count: infinite;
-	box-shadow: 3px 3px 16px;
+	
 }
 		</style>
 	</head>
