--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ img {
 	transform: translateX(-3px) rotate(-4deg);
 	}
 }
-			h1{
+			.message{
 			box-shadow: 3px 3px 16px;
 				display: inline-block;
 				vertical-align: middle;
@@ -25,7 +25,7 @@ img {
 				background: lightgray;
 				font-family: serif;
 			}
-h1:hover, h1:focus, h1:active {
+.message:hover, .message:focus, .message:active {
 	animation-name: wobble;
   	animation-duration: 0.15s;
   	animation-iteration-count: infinite;
@@ -34,7 +34,7 @@ h1:hover, h1:focus, h1:active {
 		</style>
 	</head>
 	<body>
-		<h1>To Mummy, I love you.<br>Hello Mummy are you ok? From Willa.</h1>
+		<div class='message'>To Mummy, I love you.<br>Hello Mummy are you ok? From Willa.</div>
 		<div><img src="pixie.jpg" width="500px" height="500px">
 		<img class="spin" src="butterfly.png" width="500px" height="450px"></div>
 	</body>
