--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ img {
 				cursor: pointer;
 				background: lightgray;
 				font-family: serif;
+				font-size: 18px;
 			}
 .message:hover, .message:focus, .message:active {
 	animation-name: wobble;
