--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ img {
 				padding: 8px;
 				cursor: pointer;
 				background: lightgray;
-				font-family: serif;
+				font-family: sans-serif;
 				font-size: 18px;
 			}
 .message:hover, .message:focus, .message:active {
