--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@ img {
 		</style>
 	</head>
 	<body>
-		<div class='message'>To Mummy, I love you.<br>Hello Mummy are you ok? From Willa.</div>
+		<div class='message'>To Mummy, I love you.<br>Hello Mummy are you ok? From Willa. Dear
+ Mummy. Let's bake and play on Saturday. From Willa. Let's also get a donut.</div>
 		<div><img src="pixie.jpg" width="500px" height="500px">
 		<img class="spin" src="butterfly.png" width="500px" height="450px"></div>
 	</body>
