--- a/video.html
+++ b/video.html
@@ -1,5 +1,9 @@
 <!doctype html>
-<head><title>The Picnic</title></head>
+<head><title>The Picnic</title>
+<style>
+  * { border: 0 }
+  </style>
+</head>
 <html>
 <video width="800" height="600" controls>
   <source src="The_Picnic.mp4" type="video/mp4">
