--- a/video.html
+++ b/video.html
@@ -1,7 +1,14 @@
 <!doctype html>
 <head><title>The Picnic</title>
 <style>
-  * { border: 0 }
+ * {
+   border: 0;
+ }
+ video {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
+ }
   </style>
 </head>
 <html>
