--- a/video.html
+++ b/video.html
@@ -13,7 +13,7 @@
   </style>
 </head>
 <html>
-<video width="800" height="600" controls>
+<video width="800" height="600" controls poster="poster.jpg">
   <source src="The_Picnic.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video>
