--- a/friends.html
+++ b/friends.html
@@ -1,6 +1,23 @@
 <!doctype html>
 <html>
 	<body>
-<pre>https://pub-c2-b6-thdow-bbc.live.bidi.net.uk/vod-dash-uk/usp/auth/vod/piff_abr_full_hd/a838d6-p00y8rnd/vf_p00y8rnd_b8872fef-a79e-453d-b236-7dce1082ba72.ism/dash/vf_p00y8rnd_b8872fef-a79e-453d-b236-7dce1082ba72-video=1570000.dash?at=_XXcwhqO70035ec1f869ba73e0afef40b69373553b32d5b46045c1ea69580</pre>
+		<div><a href=' https://vod-hls-uk.live.cf.md.bbci.co.uk/usp/auth/vod/piff_abr_full_hd/a838d6-p00y8rnd/vf_p00y8rnd_b8872fef-a79e-453d-b236-7dce1082ba72.ism.hlsv2.ism/vf_p00y8rnd_b8872fef-a79e-453d-b236-7dce1082ba72.ism.hlsv2-audio_eng_1=128000-video=2812000.m3u8?Expires=1693709444&Signature=b8KQWehXgztzETOROXo9-KLr9h6glqIseXFz2hDiUC9~7ZJmnLQzC-0CaO5pJBIORD~QsjWE4MpkhxiqdSvegCmfaK1Z0f~U61kyGnr4pE13xWXyE7ZiNPP3VsNq28b8lpTZHp9goztewpaiboVTBUnVvjsNKJK4jOgKihvu4bouZvbalnFCKVlnCIRBT4FUSVT0P8YgE~09HfcKcyZ-shirzws9CqZ1g2vuBcWPfmUjPlvbU5RoCFGfkLGHuZraBH75DzVIYtPWX2lf4uEtLgqpxvW8z-fY0~h1MX75fZOui4RseO378M0SAEfXyv9ypWK39nCO2tn0f~EJuKxgJw__&Key-Pair-Id=K2VWLYKQ4HU1FJ'>1
+		</a></div>
+		<div><a href=' https://vod-hls-uk-live.akamaized.net/usp/auth/vod/piff_abr_full_hd/961683-p00y8s0q/vf_p00y8s0q_6101569c-ced6-474b-adb4-37e1887104ec.ism.hlsv2.ism/vf_p00y8s0q_6101569c-ced6-474b-adb4-37e1887104ec.ism.hlsv2-audio_eng_1=128000-video=2812000.m3u8?__gda__=1693709450_5a94f14e15a9014a0c5c13977614707f'>2
+		</a></div>
+		<div><a href=' https://vod-hls-uk.live.cf.md.bbci.co.uk/usp/auth/vod/piff_abr_full_hd/6a00d1-m001c1mm/vf_m001c1mm_83c6aef4-546f-468c-a343-6d32f60e0b6f.ism.hlsv2.ism/vf_m001c1mm_83c6aef4-546f-468c-a343-6d32f60e0b6f.ism.hlsv2-audio_eng_1=128000-video=2812000.m3u8?Expires=1693709457&Signature=GfzHyERYG6BVUGa-vPZyJ1Q73VBqbR4kQHOWjQ9YFC7k~YjchVgW~p~CceU1ZV5Ad1Db7QvzLgmpCSRVQQw~dFbsgwizevaBlUn3TKfQ0PBp1kIwBTllJqEVnIdU1Up90~JWloFxz1oUnei5p~l-QT79P5ttH2NzfrBReokp8vt5~s3PJkjHp~UwrcDpCVhLgHsv3N7qf42Cq9W3~ytfw7AG8qCyhDOxKrOuw3Fnq09HnqCMpPkYVQPHSFfcaD5bQQoYjn15RVuABLPLs~VbF-nekEe~tjgrWz7C2iLoC0ljVgLFdQWUD3muyOwzNQcTYEneLfgrZq~2cJzhp38rBw__&Key-Pair-Id=K2VWLYKQ4HU1FJ'>3
+		</a></div>
+		<div><a href=' https://vod-hls-uk.live.cf.md.bbci.co.uk/usp/auth/vod/piff_abr_full_hd/a332ec-p00y8syk/vf_p00y8syk_5e878bc1-cb59-4dd8-b10d-ff6bc981a189.ism.hlsv2.ism/vf_p00y8syk_5e878bc1-cb59-4dd8-b10d-ff6bc981a189.ism.hlsv2-audio_eng_1=128000-video=2812000.m3u8?Expires=1693709463&Signature=iFK2xtL43Ijcl3BjBrnMPE-pTGUsA6XfiEo3DZsIjueWFIOs0UcIUsvL3xFPvlYral3J5WpmLQ9T67QqC-mzmysdhCx1CrwYBHht34bxY6yymCF97aOF6GxMwhjTXB0-n~PkCahebxMxKJNZWBF~PSO0Ee4TpE-~fXl9vSvvtrE-hLPrU~yix3xOq6mpCYNVaG2osN8U-wDfOaA5uFhveQZK3~AofcFJ3ktNDHqGQDiEcYxLCoNDrdZFBvFVjvFhaS6XJIxkYxkaG2rC7UffS5v-ZgxRlkOUjyA3lIPNQDGr-d4LguzZv8zjv6qJ2IooMRe-N04pJu-epz3uCCK9dg__&Key-Pair-Id=K2VWLYKQ4HU1FJ'>4
+		</a></div>
+		<div><a href=' https://vod-hls-uk-live.akamaized.net/usp/auth/vod/piff_abr_full_hd/9768f8-p00yh2tk/vf_p00yh2tk_274951c2-c862-414a-b172-3b7c73b1baff.ism.hlsv2.ism/vf_p00yh2tk_274951c2-c862-414a-b172-3b7c73b1baff.ism.hlsv2-audio_eng_1=128000-video=2812000.m3u8?__gda__=1693709468_c14adc899d7da64330f264d64b3e9c1e'>5
+		</a></div>
+		<div><a href=' https://vod-hls-uk-live.akamaized.net/usp/auth/vod/piff_abr_full_hd/af5b33-p00yh3rb/vf_p00yh3rb_1041a499-4b95-4f08-b4ff-f66ce2bfef42.ism.hlsv2.ism/vf_p00yh3rb_1041a499-4b95-4f08-b4ff-f66ce2bfef42.ism.hlsv2-audio_eng_1=128000-video=2812000.m3u8?__gda__=1693709474_418247e94199977e895f99511ab81b9c'>6
+		</a></div>
+		<div><a href=' https://vod-hls-uk-live.akamaized.net/usp/auth/vod/piff_abr_full_hd/2e2e8c-p00yh4h4/vf_p00yh4h4_773c22d4-c7e0-47fe-b185-4b480fea43ec.ism.hlsv2.ism/vf_p00yh4h4_773c22d4-c7e0-47fe-b185-4b480fea43ec.ism.hlsv2-audio_eng_1=128000-video=2812000.m3u8?__gda__=1693709479_95b21f57792466e37c0c6e6d2a024fcb'>7
+		</a></div>
+		<div><a href=' https://vod-hls-uk-live.akamaized.net/usp/auth/vod/piff_abr_full_hd/ddd300-p00yh54z/vf_p00yh54z_3a732fd6-a626-47e8-b4c1-7c4b1989f426.ism.hlsv2.ism/vf_p00yh54z_3a732fd6-a626-47e8-b4c1-7c4b1989f426.ism.hlsv2-audio_eng_1=128000-video=2812000.m3u8?__gda__=1693709486_fc6bafc37947b03955dd970a6fb82dee'>8
+		</a></div>
+		<div><a href=' https://pub-c2-b7-thdow-bbc.live.bidi.net.uk/vod-hls-uk/usp/auth/vod/piff_abr_full_hd/cb8086-p00yh6r6/vf_p00yh6r6_f9041845-7e90-44df-a2ad-4c5a6bcc1f64.ism.hlsv2.ism/vf_p00yh6r6_f9041845-7e90-44df-a2ad-4c5a6bcc1f64.ism.hlsv2-audio_eng_1=128000-video=2812000.m3u8?at=OT6oOOkIa588668cdceedfa8c55bbd70ee88a50cc54cac0a60466711a7ac0'>9
+		</a></div>
 	</body>
 </html>
